WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280987
Regression(
284012@main
) Crash under DNSResolveQueueCFNet::performDNSLookup()
https://bugs.webkit.org/show_bug.cgi?id=280987
Summary
Regression(284012@main) Crash under DNSResolveQueueCFNet::performDNSLookup()
Chris Dumez
Reported
2024-10-07 10:24:01 PDT
Crash under DNSResolveQueueCFNet::performDNSLookup() since
284012@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-10-07 10:24:10 PDT
<
rdar://137067072
>
Chris Dumez
Comment 2
2024-10-07 10:29:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34783
EWS
Comment 3
2024-10-07 12:02:01 PDT
Committed
284776@main
(1255032f5754): <
https://commits.webkit.org/284776@main
> Reviewed commits have been landed. Closing PR #34783 and removing active labels.
EWS
Comment 4
2024-10-08 14:10:35 PDT
Committed
283286.228@safari-7620-branch
(d4868e46fd4d): <
https://commits.webkit.org/283286.228@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1991 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug